# polars_pareto_front

./: Cargo.toml  Makefile  README.md  pyproject.toml  run.py
polars_pareto_front/: __init__.py
tests/: test_pig_latinnify.py
