[package]
name = "polars-pareto-front"
version = "0.1.0"
edition = "2021"

[lib]
name = "polars_pareto_front"
crate-type= ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.19.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.45.1", default-features = false }

